[gd_scene load_steps=6 format=2]

[ext_resource path="res://minigames/TableDog.gd" type="Script" id=1]
[ext_resource path="res://sceneBackgrounds/Ola.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/DogSurf.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/bgm/huayno.ogg" type="AudioStream" id=4]
[ext_resource path="res://ui/UIArrows.tscn" type="PackedScene" id=5]

[node name="TableDog" type="Node2D"]
script = ExtResource( 1 )

[node name="Olas" type="Node2D" parent="."]
modulate = Color( 0.501961, 0.611765, 0.603922, 1 )
light_mask = 2

[node name="Ola1" parent="Olas" instance=ExtResource( 2 )]
light_mask = 2
position = Vector2( 2400, 440 )

[node name="Ola2" parent="Olas" instance=ExtResource( 2 )]
light_mask = 2
position = Vector2( 1980, 300 )

[node name="Ola3" parent="Olas" instance=ExtResource( 2 )]
light_mask = 2
position = Vector2( 1510, 370 )

[node name="Ola4" parent="Olas" instance=ExtResource( 2 )]
light_mask = 2
position = Vector2( 970, 330 )

[node name="Ola5" parent="Olas" instance=ExtResource( 2 )]
light_mask = 2
position = Vector2( 650, 380 )

[node name="DogSurf" parent="." instance=ExtResource( 3 )]
position = Vector2( 1130, 570 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="AlmostCountDown" type="Timer" parent="."]

[node name="UIArrows" parent="." instance=ExtResource( 5 )]
[connection signal="timeout" from="AlmostCountDown" to="." method="_on_AlmostCountDown_timeout"]
